@@ -64,7 +64,7 @@
    </table>
   </div>
   <div id="copyright">
-    <span>Copyright © 2020 <a href="about/contact.html">Stephan Tolksdorf</a></span>
+    <span>Copyright © 2022 <a href="about/contact.html">Stephan Tolksdorf</a></span>
   </div>
  </div>
  </div>
@@ -116,7 +116,7 @@
    </div>
    <div class="para _5">
     <p>
-     <span class="i"><strong>Latest release:</strong></span> FParsec 1.1.1, 2020‒02‒01, <a
+     <span class="i"><strong>Latest release:</strong></span> FParsec 2.0.0, 2022‒11‒01, <a
      href="https://github.com/stephan-tolksdorf/fparsec/archive/master.zip">Download</a>, <a
      href="download-and-installation.html#nuget-packages">NuGet packages</a>, <a href="about/changelog.html">Changes</a>
     </p>
