@@ -93,7 +93,7 @@
    </table>
   </div>
   <div id="copyright">
-    <span>Copyright © 2020 <a href="about/contact.html">Stephan Tolksdorf</a></span>
+    <span>Copyright © 2022 <a href="about/contact.html">Stephan Tolksdorf</a></span>
   </div>
  </div>
  </div>
@@ -138,7 +138,7 @@
    <h2 class="title h2"><span><span class="section-number">2.1</span> Simplified BSD License</span></h2>
    <div class="intro i2">
     <div class="para _1">
-     <p>Copyright (c) 2007‒2017, Stephan Tolksdorf. All rights reserved.</p>
+     <p>Copyright (c) 2007‒2022, Stephan Tolksdorf. All rights reserved.</p>
     </div>
     <div class="para _2 lcinp">
      <p>
