@@ -125,7 +125,7 @@
    </table>
   </div>
   <div id="copyright">
-    <span>Copyright © 2020 <a href="../about/contact.html">Stephan Tolksdorf</a></span>
+    <span>Copyright © 2022 <a href="../about/contact.html">Stephan Tolksdorf</a></span>
   </div>
  </div>
  </div>
