@@ -144,7 +144,7 @@
    </table>
   </div>
   <div id="copyright">
-    <span>Copyright © 2020 <a href="../about/contact.html">Stephan Tolksdorf</a></span>
+    <span>Copyright © 2022 <a href="../about/contact.html">Stephan Tolksdorf</a></span>
   </div>
  </div>
  </div>
@@ -195,8 +195,8 @@
         <div class="para _1">
          <p>
           <code class="fsharp"><span class="ci">FParsec</span><span class="cm">.</span><span class="ci">Text</span><span class="cm">.</span><span
-          class="ci">CountTextElements</span><span class="cp">(</span><span class="ci">str</span><span class="cp">)</span></code> is equivalent
-          to <code class="fsharp"><a href="https://msdn.microsoft.com/en-us/library/system.globalization.stringinfo.aspx"><span
+          class="ci">CountTextElements</span><span class="cp">(</span><span class="ci">str</span><span class="cp">)</span></code> is equivalent to
+          <code class="fsharp"><a href="https://msdn.microsoft.com/en-us/library/system.globalization.stringinfo.aspx"><span
           class="ci">System</span><span class="cm">.</span><span class="ci">Globalization</span><span class="cm">.</span><span
           class="ci">StringInfo</span></a><span class="cp">(</span><span class="ci">str</span><span class="cp">)</span><span class="cm">.</span><a
           href="https://msdn.microsoft.com/en-us/library/system.globalization.stringinfo.lengthintextelements.aspx"><span
