@@ -8,7 +8,7 @@ The documentation in the =Doc= folder is licensed under the [@ Creative Commons 
 
 [section Simplified BSD License]
 
-Copyright (c) 2007-2017, Stephan Tolksdorf. All rights reserved.
+Copyright (c) 2007-2022, Stephan Tolksdorf. All rights reserved.
 
 Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:
 - Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.
