@@ -22,7 +22,7 @@
    {navigation-tree}
   </div>
   <div id="copyright">
-    <span>Copyright © 2020 <a href="{html-output-dir}about/contact.html">Stephan Tolksdorf</a></span>
+    <span>Copyright © 2022 <a href="{html-output-dir}about/contact.html">Stephan Tolksdorf</a></span>
   </div>
  </div>
  </div>
